added node-version file, and update, delete, post routes
