# routes/courseDetails.js
@@ -1,7 +1,10 @@
 const express = require('express');
 const router = express.Router();
-const { getCourseDetails, getSingleCourse } = require('../controllers/courseDetails');
+const { addDetails, deleteDetail, getCourseDetails, getSingleCourse, updateDetail } = require('../controllers/courseDetails');
 
 router.get('/', getCourseDetails).get('/:id', getSingleCourse);
+router.post('/', addDetails);
+router.put('/:id', updateDetail);
+router.delete('/:id', deleteDetail);
 
 module.exports = router;
