# routes/courseUsers.js
@@ -1,10 +1,0 @@
-// const express = require('express');
-// const router = express.Router();
-// const { createUser, deleteUser, getUsers, getSingleUser, updateUser } = require('../controllers/courseUsers')
-
-// router.get('/', getUsers).get('/:id', getSingleUser);
-// router.post('/', createUser);
-// router.put('/:id', updateUser);
-// router.delete('/:id', deleteUser);
-
-// module.exports = router;
