# routes/index.js
@@ -6,7 +6,6 @@ router
     .use('/courses', require('./courses'))
     .use('/courseInstructors', require('./courseInstructors'))
     .use('/courseDetails', require('./courseDetails'))
-    // .use('/courseUsers', require('./courseUsers'))
     .use('/authorization', require('./authorization'))
 
 module.exports = router;
